--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
+    "axios": "^0.24.0",
     "gsap": "^3.8.0",
     "moment": "^2.29.1",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
+    "react-open-weather": "^1.1.6",
     "react-redux": "7.2.2",
     "react-router-dom": "^6.1.1",
     "react-slick": "^0.28.1",
