--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "gsap": "^3.8.0",
     "moment": "^2.29.1",
     "next": "latest",
-    "react": "17.0.1",
+    "react": "^17.0.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
     "react-open-weather": "^1.1.6",
