--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "1.5.0",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
+    "faker": "^5.5.3",
     "gsap": "^3.8.0",
     "moment": "^2.29.1",
     "next": "latest",
@@ -21,6 +22,8 @@
     "react-redux": "7.2.2",
     "react-router-dom": "^6.1.1",
     "react-slick": "^0.28.1",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.6",
     "uifx": "^2.0.7"
   },
   "license": "MIT",
