--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "7.2.2",
     "react-router-dom": "^6.1.1",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "tailwind-scrollbar": "^1.3.1",
     "tailwind-scrollbar-hide": "^1.1.6",
     "uifx": "^2.0.7"
